# agent-content-connectors

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  setup.sh
docs/: ARCHITECTURE.md  USER_ACTIONS.md
mcp-server/: .env.example  README.md  pyproject.toml
mcp-server/sandbox/: README.md
mcp-server/scripts/: capture_dzen_session.py
mcp-server/src/broker_connectors/: __init__.py  cli.py  config.py  confirmation.py  envfile.py  nango_client.py  platforms.py  provisioning.py  registry.py  runtime.py  server.py
mcp-server/src/broker_connectors/adapters/: __init__.py  base.py  dzen.py
mcp-server/src/broker_connectors/selfextend/: __init__.py  scaffold.py
mcp-server/src/broker_connectors/selfextend/templates/: manifest.json.j2  mcp_tool.py.j2
mcp-server/src/broker_connectors/tools/: __init__.py  _common.py  base.py  connect.py  dzen_tool.py  instagram.py  vk.py  youtube.py
mcp-server/src/broker_connectors/wizard/: __init__.py  server.py
mcp-server/tests/: conftest.py  test_confirmation.py  test_envfile.py  test_nango_client.py  test_provisioning.py  test_registry.py  test_selfextend.py  test_tools.py
nango/: .env.example  README.md  docker-compose.yaml  get-secret-key.sh  setup.sh
