[project]
name = "broker-connectors"
version = "0.1.0"
description = "Thin MCP server over self-hosted Nango — personal content connectors for an orchestrator agent"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
]

[project.scripts]
broker-mcp = "broker_connectors.server:main"
broker-connect = "broker_connectors.cli:main"
broker-wizard = "broker_connectors.wizard.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/broker_connectors"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
